fixed header alignment

--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -7,7 +7,7 @@ h3 {
 }
 
 .message-box{
-  background-color: #e6e6e6;
+  background-color: #eeeeee;
   width: 323px;
 }
 
